Bug 78040 - OLE preview image (SVM) isn't visible when loading document prior to LibreOffice 4.3
Summary: OLE preview image (SVM) isn't visible when loading document prior to LibreOff...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0.0.beta2 target:4.4.0
Keywords: regression
: 78134 79080 (view as bug list)
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-04-28 17:56 UTC by Jorendc
Modified: 2014-06-14 13:48 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document created using LibreOffice 4.2.4.1 (15.41 KB, application/vnd.oasis.opendocument.text)
2014-04-28 17:56 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2014-04-28 17:56:27 UTC
Created attachment 98132 [details]
Test document created using LibreOffice 4.2.4.1

Tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: a3c00ee3c7b3b0fbcde32baeb7023c7e8526b908
TinderBox: Win-x86@47-TDF, Branch:MASTER, Time: 2014-04-28_07:22:55

How to reproduce:
* Open attached test document

Behavior: empty table in document. Only a border is drawn where the content is supposed to be.
If you double click on it, and deselect it again, content is visible.

How to create document yourself:
* Open new spreadsheet using LibreOffice 4.2 or older (not 4.3)
* Type some numbers in column 1 (lets say just 1 to 5 from A1 to A5)
* Select A1 to A5 and copy (CTRL + C)
* Open new document using same LibreOffice version (4.2 or older)
* Paste in document (CTRL + V)
* Save document (as .odt). You can either close or save the spreadsheet (doesn't matter).

* Open saved document using version 4.3

Regression against 4.2.

This bug is not reproducible if you create the document using 4.3 itself.

Kind regards,
Joren
Comment 1 Arnaud Versini 2014-04-28 18:12:21 UTC
Confirmed with 4.2.3 and 4.3 master
Comment 2 Arnaud Versini 2014-04-28 18:13:13 UTC
OpenSuse => All OS
Comment 3 Jorendc 2014-04-30 22:10:19 UTC
*** Bug 78134 has been marked as a duplicate of this bug. ***
Comment 4 Michael Stahl 2014-05-23 11:52:02 UTC
looks like another EMF/WMF regression, on master; current 4.2 works
Comment 5 Tomaz Vajngerl 2014-05-23 12:08:48 UTC
Ah WMF/EMF - one step forward, one step back...
Comment 6 Tomaz Vajngerl 2014-05-23 12:18:02 UTC
It's not WMF/EMF regression.. it's a SVM (GDIMetafile) font rendering regression :) I think there is already a duplicate bug reported (I vaguely remember reading one).
Comment 7 Jorendc 2014-05-25 19:14:38 UTC
(In reply to comment #6)
> It's not WMF/EMF regression.. it's a SVM (GDIMetafile) font rendering
> regression :) I think there is already a duplicate bug reported (I vaguely
> remember reading one).

I'm not a developer, but please try to find a consensus which kind of regression this is ;-). /me hides

If this is a GDIMetafile regression, we can mark bug 79080 as a dupe. Please do so if that's the case.

Kind regards,
Joren
Comment 8 Jorendc 2014-05-25 19:15:10 UTC
PS: if that's the case, in bug 79080 there is a bibisection attached.
Comment 9 Tomaz Vajngerl 2014-05-26 08:56:54 UTC
This one is simple - There is no WMF/EMF in the document so it can't be a WMF/EMF regression (if the laws in this universe still apply). :) 

On the other hand there is a SVM file (object replacement) and SVM is just a serialized form of a GDIMetafile.
Comment 10 Michael Stahl 2014-05-27 17:59:26 UTC
well i'm just a dumb writer developer, all i care about is it's not a writer bug :)
Comment 11 Commit Notification 2014-05-27 20:09:47 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=86823db3412fc10ca75fa1e0b1900118582149c6&h=libreoffice-4-3

Resolves: fdo#78040 nAryLen is traditionally 32bit not 16bit


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-05-27 20:10:01 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5326c563463a8682e0433c0badf39657446f1053

Resolves: fdo#78040 nAryLen is traditionally 32bit not 16bit



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Stahl 2014-05-30 15:51:50 UTC
*** Bug 79080 has been marked as a duplicate of this bug. ***
Comment 14 Michael Stahl 2014-05-30 15:54:22 UTC
oops, looks like this one was actually my fault :)
see that's why i usually try to stay away from graphics bugs :)