Resolves: fdo#78040 nAryLen is traditionally 32bit not 16bit

30bb1eddba2b4a36b4354303ffcb37a3a15f38a6 originally incorrectly
changed some different 16bit numbers to 32bit, then
02abb559fb506e3d3911bbf058c9a60d28b0a3b5 reverted those 16bit->32bit
changes but accidentally changed the 32bit nAryLen to 16bit but
that was 32bit before 30bb1eddba2b4a36b4354303ffcb37a3a15f38a6

Change-Id: I36863b62418d7a3b5ccce51aef86c63c523f9598
(cherry picked from commit 5326c563463a8682e0433c0badf39657446f1053)